--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "@kevingio/number-utils",
   "version": "0.1.1",
   "description": "Set of utils to work on number",
-  "main": "dist/main.js",
+  "main": "index.js",
   "scripts": {
-    "build": "webpack --config=webpack.config.js"
+    "build": "babel src -d dist",
+    "prepublishOnly": "npm run build"
   },
+  "files": [
+    "dist"
+  ],
   "repository": "@kevingio/number-utils",
   "keywords": [
     "number",
     "helpers",
     "utils",
     "utility",
-    "kevingio",
     "shortcuts"
   ],
   "author": "Kevin Giovanni",
@@ -22,13 +25,13 @@
   },
   "homepage": "https://github.com/kevingio/number-utils#readme",
   "devDependencies": {
+    "@babel/cli": "^7.17.10",
     "@babel/core": "^7.17.10",
-    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-env": "^7.17.12",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
     "terser-webpack-plugin": "^4.2.3",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.9.2"
-  },
-  "dependencies": {}
+  }
 }
