--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@kevingio/number-utils",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "Set of utils to work on number",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "babel src -d dist",
     "prepublishOnly": "npm run build"
@@ -10,7 +10,6 @@
   "files": [
     "dist"
   ],
-  "repository": "@kevingio/number-utils",
   "keywords": [
     "number",
     "helpers",
@@ -20,18 +19,11 @@
   ],
   "author": "Kevin Giovanni",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/kevingio/number-utils/issues"
-  },
   "homepage": "https://github.com/kevingio/number-utils#readme",
   "devDependencies": {
     "@babel/cli": "^7.17.10",
     "@babel/core": "^7.17.10",
     "@babel/preset-env": "^7.17.12",
-    "babel-loader": "^8.2.5",
-    "clean-webpack-plugin": "^4.0.0",
-    "terser-webpack-plugin": "^4.2.3",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^4.9.2"
+    "babel-loader": "^8.2.5"
   }
 }
