--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@kevingio/number-utils",
   "version": "0.1.3",
   "description": "Set of utils to work on number",
-  "main": "dist/index.js",
+  "main": "index.js",
   "scripts": {
     "build": "babel src -d dist",
     "prepublishOnly": "npm run build"
